--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,11 @@ description: > # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://facastagnini.github.io" # the base hostname & protocol for your site
+url: "https://facastagnini.github.io" # the base hostname & protocol for your site
 twitter_username: 
 github_username: facastagnini
 bitcoin_address: "1DFB4uf8iHoDBHkQy1inuwoHEdscim5waq"
-bitcoin_image: "http://i.imgur.com/62AjNwX.png"
+timezone: "America/New_York"
 
 # Build settings
 markdown: kramdown
