--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,36 @@
 # Site settings
 title: "You are reading Federico Castagnini's blog"
-email: federico.castagnini@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "https://facastagnini.github.io" # the base hostname & protocol for your site
-twitter_username: 
-github_username: facastagnini
-bitcoin_address: "1DFB4uf8iHoDBHkQy1inuwoHEdscim5waq"
-timezone: "America/New_York"
+description: "A minimal blog about technology."
+url: "https://facastagnini.github.io"
+author:
+  name: "Federico Castagnini"
+  email: "federico.castagnini@gmail.com"
+  url: "https://facastagnini.github.io"
+  github_username: facastagnini
+  bitcoin_address: "1DFB4uf8iHoDBHkQy1inuwoHEdscim5waq"
 
 # Build settings
+baseurl: / # Change this to your relative path (ex: /blog/), or leave just a /
 markdown: kramdown
+source: .
+destination: ./_site
+permalink: /:title
+paginate: 8
+paginate_path: /page:num/
+
+# Default values
+defaults:
+  -
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
+
+# Custom variables
+version: "1.1.0"
+
+# Options
+custom_header: false
+custom_nav_footer: false
+reverse: false
