--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -25,6 +25,8 @@ engines:
     enabled: false
   csslint:
     enabled: true
+  fixme:
+    enabled: true
 
 # Engines can analyze files and report issues on them, but you can separately
 # decide which files will receive ratings based on those issues. This is
