--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   # pinterest: asd123
   linkedin: fcastagnini
   bio: A minimal blog about technology.
-  # email_md5: 726351295ec82e145928582f595aa3aa
+  email_md5: 4de95cb8b15ef0d29ccd2f63695f1cec
 
 # rss_path: feed.xml
 categories_path: categories.html
