--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ author:
   # twitter: dbtek
   # pinterest: asd123
   linkedin: fcastagnini
+  hackerrank: facastagnini
   bio: A minimal blog about technology.
   # used to grab the gravatar
   email_md5: 074d48adc68e8fd2c71fa9d0d50de276
