--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,9 @@ language: ruby
 rvm:
 - 2.1.7
 
-# branch whitelist, only for GitHub Pages
-# branches:
-#   - master
-
 env:
   global:
   - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
+
+notifications:
+  email: false
