--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ paginate: 10 # pagination based on number of posts
 paginate_path: "page:num"
 permalink: /:title
 exclude: ["README.md"] # files to exclude
-highlighter: rouge
+highlighter: rogue
 markdown: kramdown
 disqus: dbyll
 google_analytics: UA-28304401-3
