adding missing URL variable
https://github.com/jekyll/jekyll-sitemap/issues/171

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ markdown: kramdown
 disqus: dbyll
 google_analytics: dbyll
 title: Federico Ariel Castagnini's blog
+url: "https://facastagnini.github.io"
 
 defaults:
   -
