--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
 
 before_install:
 - sudo apt-get update -qq
-- sudo apt-get upgrade -y 
+- sudo apt-get install --reinstall ca-certificates -y
 
 notifications:
   email: false
