--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,11 @@
 language: ruby
+dist: trusty
 rvm:
 - 2.4.2
 
 env:
   global:
   - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
-
-before_install:
-- sudo apt-get update -qq
-- sudo apt-get install --reinstall ca-certificates -y
 
 notifications:
   email: false
