--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ exclude: ["README.md"] # files to exclude
 highlighter: rouge
 markdown: kramdown
 disqus: dbyll
-google_analytics: dbyll
+google_analytics: UA-28304401-3
 title: Federico Ariel Castagnini's blog
 url: "https://facastagnini.github.io"
 
