adding gitlab variable

--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ author:
   name: Federico Ariel Castagnini
   # email: federico.castagnini+fromjekyll@gmail.com
   github: facastagnini
+  gitlab: facastagnini
   # twitter: dbtek
   # pinterest: asd123
   linkedin: fcastagnini
