--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ markdown: kramdown
 disqus: dbyll
 google_analytics: UA-28304401-3
 title: Federico Ariel Castagnini's blog
-url: "https://facastagnini.github.io"
+url: "http://blog.191161.xyz"
 
 defaults:
   -
